--- a/KolekcjeGeneryczneTest/KolekcjeGeneryczneTest.csproj
+++ b/KolekcjeGeneryczneTest/KolekcjeGeneryczneTest.csproj
@@ -51,6 +51,8 @@
   <ItemGroup>
     <Compile Include="ListaTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="KolejkaTest.cs" />
+    <Compile Include="StackTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
