--- a/KolekcjeGeneryczneTest/KolekcjeGeneryczneTest.csproj
+++ b/KolekcjeGeneryczneTest/KolekcjeGeneryczneTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KolejkaTest.cs" />
     <Compile Include="StackTest.cs" />
+    <Compile Include="HashSetTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
